# CMS_Websocket

./: .gitignore  README.md  client.js  clientReceiveData.js  clientSendData.js  index.html  index.js  mt.html  testNodejs.js
ClientSender/: ClientSender.cpp  ClientSender.h  main.cpp
ClientSender/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
engine-v1-anpr_08_17/: CMakeLists.txt  README
engine-v1-anpr_08_17/PlateDetector/: PlateDetector.vcxproj  PlateDetector.vcxproj.filters  ReadMe.txt
engine-v1-anpr_08_17/PlateExtractor/: CMakeLists.txt
engine-v1-anpr_08_17/PlateRecognizationFramework/: AnalyzeCharactor.cpp  CMakeLists.txt  ConnectPqSql.cpp  IOData.cpp  IOData.h  ListDistrict.cpp  ListMilitary.cpp  ListNation.cpp  ListProvince.cpp  Main.cpp  easywsclient.cpp
engine-v1-anpr_08_17/PlateRecognizationFramework/include/: AnalyzeCharactor.h  ConnectPqSql.h  HungarianAlg.h  Kalman.h  ObjectUtils.h  PlateReader.h  PlateRecognizator.h  Qtrackers.h  VideoReader.h  crop_character_rect.h  crop_plate_corner.h  estimate_square_cascade.h  group_plates.h  trackingkalman.h
engine-v1-anpr_08_17/PlateRecognizationFramework/src/: AnalyzeCharactor.cpp  ConnectPqSql.cpp  HungarianAlg.cpp  Kalman.cpp  ObjectUtils.cpp  PlateReader.cpp  PlateRecognitionAction.cpp  PlateRecognizator.cpp  Qtrackers.cpp  VideoReader.cpp  crop_character_rect.cpp  crop_plate_corner.cpp  estimate_square_cascade.cpp  group_plates.cpp  tracking_thanhnn.cpp  trackingkalman.cpp
(+51 files in other folders)
